fix allways appear a horizontal scrollbar

--- a/src/hachibee_sphinx_theme/hachibee/stylus/main.styl
+++ b/src/hachibee_sphinx_theme/hachibee/stylus/main.styl
@@ -19,7 +19,6 @@ footer-position()
   bottom: 0
   width: 100%
   margin: auto
-  padding-left: 20px
 
 line-bottom(op1=.2, op2=.3)
   border-bottom: 1px solid rgba(0, 0, 0, op1);
